# gmail-mcp

./: .gitattributes  .pre-commit-config.yaml  .taplo.toml  LICENSE  README.md  pyproject.toml
src/gmail/: __about__.py  __init__.py
