# Guide (user-friendly):
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# Specification (technical, formal):
# https://packaging.python.org/en/latest/specifications/pyproject-toml/

# TOML Specification (technical, formal):
# https://toml.io/en/latest

# =======================================================================================

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "gmail-mcp"
dynamic = [ "version" ]
description = 'An MCP server to interface with Gmail via the MCP protocol.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [ "gmail", "gmail-api", "google", "mcp", "mcp-server" ]
authors = [ { name = "Eugene Mwangi", email = "mwangi.em37@gmail.com" } ]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python",
]

[project.urls]
Documentation = "https://github.com/eugengi/gmail-mcp#readme"
Issues = "https://github.com/eugengi/gmail-mcp/issues"
Source = "https://github.com/eugengi/gmail-mcp"

[tool.hatch.build.targets.wheel]
packages = [ "src/gmail" ]

dependencies = [  ]

[dependency-groups]
quality = [ "pre-commit>=3.5.0" ]

# == Hatch ==============================================================================

# For extensive hatch config:
# See: https://coverage.readthedocs.io/en/latest/config.html
[tool.hatch.version]
path = "src/gmail/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [ "mypy>=1.0.0" ]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/gmail tests}"

# == Coverage ===========================================================================

# For extensive coverage config:
# See: https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
branch = true
omit = [ "src/gmail/__about__.py" ]
parallel = true
source_pkgs = [ "gmail", "tests" ]

[tool.coverage.paths]
gmail = [ "*/gmail-mcp/src/gmail", "src/gmail" ]
tests = [ "*/gmail-mcp/tests", "tests" ]

[tool.coverage.report]
exclude_also = [
  "@(abc\\.)?abstractmethod",
  "assert",
  "class .*Protocol:",
  "def __repr__",
  "def __str__",
  "if TYPE_CHECKING:",
  "if __name__ == '__main__':",
  "if __name__ == .__main__.:",
  "no cov",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
]
ignore_errors = true
include_namespace_packages = true
precision = 2
show_missing = true
skip_empty = true
